--- a/kubernetes/nginx-service.yaml
+++ b/kubernetes/nginx-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: flask-app
   labels:
-    app: nginx
+    app: flask-app
 spec:
   ports:
   - name: http
@@ -11,7 +11,7 @@ spec:
     protocol: TCP
     targetPort: 5000
   selector:
-    app: nginx
+    app: flask-app
   type: LoadBalancer
 
   #1234
